--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 spring.application.name=platform
 spring.main.allow-bean-definition-overriding=true
+spring.datasource.url=jdbc:mysql://localhost:3306/companydb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Dialect pentru MySQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
