--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,12 +4,23 @@ spring.datasource.url=jdbc:mysql://localhost:3306/companydb?useSSL=false&allowPu
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=laurapurcel6@gmail.com
+spring.mail.password=flasxsuzgigiybie
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
